--- a/paper/aaai2026.bib
+++ b/paper/aaai2026.bib
@@ -133,3 +133,168 @@
   journal={arXiv preprint arXiv:2402.03367},
   year={2024}
 }
+
+@article{hsu2025dat,
+  title={DAT: Dynamic Alpha Tuning for Hybrid Retrieval in Retrieval-Augmented Generation},
+  author={Hsu, H.L. and Chen, M. and Wang, Y.},
+  journal={arXiv preprint arXiv:2503.23013},
+  year={2025}
+}
+
+@article{asai2023selfrag,
+  title={Self-RAG: Learning to Retrieve, Generate, and Critique through Self-Reflection},
+  author={Asai, Akari and Wu, Zeqiu and Wang, Yizhong and Sil, Avirup and Hajishirzi, Hannaneh},
+  journal={arXiv preprint arXiv:2310.11511},
+  year={2023}
+}
+
+@article{lin2019neural,
+  title={The Neural Hype and Comparisons Against Weak Baselines},
+  author={Lin, Jimmy},
+  journal={ACM SIGIR Forum},
+  volume={52},
+  number={2},
+  pages={40--51},
+  year={2019}
+}
+
+@article{srivastava2014dropout,
+  title={Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+  author={Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+  journal={Journal of Machine Learning Research},
+  volume={15},
+  number={1},
+  pages={1929--1958},
+  year={2014}
+}
+
+@article{chen1999empirical,
+  title={An Empirical Study of Smoothing Techniques for Language Modeling},
+  author={Chen, Stanley F and Goodman, Joshua},
+  journal={Computer Speech \& Language},
+  volume={13},
+  number={4},
+  pages={359--394},
+  year={1999}
+}
+
+@article{howard2017mobilenets,
+  title={MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications},
+  author={Howard, Andrew G and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
+  journal={arXiv preprint arXiv:1704.04861},
+  year={2017}
+}
+
+@article{domingos1999role,
+  title={The Role of Occam's Razor in Knowledge Discovery},
+  author={Domingos, Pedro},
+  journal={Data Mining and Knowledge Discovery},
+  volume={3},
+  number={4},
+  pages={409--425},
+  year={1999}
+}
+
+@incollection{baker2016simplicity,
+  title={Simplicity},
+  author={Baker, Alan},
+  booktitle={Stanford Encyclopedia of Philosophy},
+  year={2016},
+  publisher={Stanford University}
+}
+
+@article{salton1988term,
+  title={Term-weighting Approaches in Automatic Text Retrieval},
+  author={Salton, Gerard and Buckley, Christopher},
+  journal={Information Processing \& Management},
+  volume={24},
+  number={5},
+  pages={513--523},
+  year={1988}
+}
+
+@article{devlin2019bert,
+  title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  journal={arXiv preprint arXiv:1810.04805},
+  year={2019}
+}
+
+@article{vaswani2017attention,
+  title={Attention Is All You Need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+@article{reimers2019sentence,
+  title={Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks},
+  author={Reimers, Nils and Gurevych, Iryna},
+  journal={arXiv preprint arXiv:1908.10084},
+  year={2019}
+}
+
+@article{khattab2020colbert,
+  title={ColBERT: Efficient and Effective Passage Search via Contextualized Late Interaction over BERT},
+  author={Khattab, Omar and Zaharia, Matei},
+  journal={arXiv preprint arXiv:2004.12832},
+  year={2020}
+}
+
+@article{gao2021simcse,
+  title={SimCSE: Simple Contrastive Learning of Sentence Embeddings},
+  author={Gao, Tianyu and Yao, Xingcheng and Chen, Danqi},
+  journal={arXiv preprint arXiv:2104.08821},
+  year={2021}
+}
+
+@article{izacard2021leveraging,
+  title={Leveraging Passage Retrieval with Generative Models for Open Domain Question Answering},
+  author={Izacard, Gautier and Grave, Edouard},
+  journal={arXiv preprint arXiv:2007.01282},
+  year={2021}
+}
+
+@article{xiong2021approximate,
+  title={Approximate Nearest Neighbor Negative Contrastive Learning for Dense Text Retrieval},
+  author={Xiong, Lee and Xiong, Chenyan and Li, Ye and Tang, Kwok-Fung and Liu, Jialin and Bennett, Paul and Ahmed, Junaid and Overwijk, Arnold},
+  journal={arXiv preprint arXiv:2007.00808},
+  year={2021}
+}
+
+@article{formal2021splade,
+  title={SPLADE: Sparse Lexical and Expansion Model for First Stage Ranking},
+  author={Formal, Thibault and Piwowarski, Benjamin and Clinchant, St{\'e}phane},
+  journal={arXiv preprint arXiv:2107.05720},
+  year={2021}
+}
+
+@article{zhan2021optimizing,
+  title={Optimizing Dense Retrieval Model Training with Hard Negatives},
+  author={Zhan, Jingtao and Mao, Jiaxin and Liu, Yiqun and Guo, Jiafeng and Zhang, Min and Ma, Shaoping},
+  journal={arXiv preprint arXiv:2104.08051},
+  year={2021}
+}
+
+@article{gupta2024comprehensive,
+  title={A Comprehensive Survey of Retrieval-Augmented Generation (RAG): Evolution, Current Landscape and Future Directions},
+  author={Gupta, Shubham and Ranjan, Rajesh and Sharma, Amit},
+  journal={arXiv preprint arXiv:2410.12837},
+  year={2024}
+}
+
+@article{zheng2025retrieval,
+  title={Retrieval Augmented Generation and Understanding in Vision: A Survey and New Outlook},
+  author={Zheng, Xiaoxuan and Li, Yifan and Wang, Meng and Chen, Lei},
+  journal={arXiv preprint arXiv:2503.18016},
+  year={2025}
+}
+
+@article{fox1994combination,
+  title={Combination of Multiple Searches},
+  author={Fox, Edward A and Shaw, Joseph A},
+  journal={TREC-2},
+  pages={243--252},
+  year={1994}
+}
